add filter widget, dark theme to search tools, and infinite scroll for pagination

--- a/client/style/globals/spinners.import.less
+++ b/client/style/globals/spinners.import.less
@@ -55,7 +55,7 @@
   width: 90px;
   height: 90px;
   margin: 0px auto;
-  background-color: @md-primary;
+  background-color: @light;
 
   border-radius: 100%;
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -91,7 +91,7 @@
   width: 22px;
   height: 22px;
 	margin:10px;
-  background-color: @md-primary-900;
+  background-color: @light;
 
   border-radius: 100%;
   display: inline-block;
