--- a/client/style/variables.import.less
+++ b/client/style/variables.import.less
@@ -28,6 +28,11 @@
 @divider-dark:#666;
 @divider-transparent:rgba(204, 204, 204, 0.4);
 @background-gray:#f6f6f6;
+@dark-theme-background: #455266;
+@dark-theme-toolbar: rgb(35, 47, 60);
+@dark-theme-card: #232f3c;
+@dark-theme-dropdown: #7790af;
+@dark-theme-dropdown-text: #23303d;
 
 @bw-blue: rgba(0, 20, 57, 1);
 @bw-blue-10: rgba(0, 20, 57, 0.1);
