--- a/client/views/objects/objects-search-tools.import.less
+++ b/client/views/objects/objects-search-tools.import.less
@@ -1,7 +1,8 @@
+
+
 .md-menu-toolbar {
 	width:100%;
-	padding:56px 0 0;
-	background:#eee;
+	padding:0;
 
 	.toolbar-tools {
 		width:100%;
@@ -26,9 +27,10 @@
 
 		&.open {
 			button.search-tool {
-				background:@md-primary !important;
+	      background:@dark-theme-dropdown !important;
+				border-radius:0 !important;
 				span,i {
-					color:@light !important;
+					color:@dark-theme-dropdown-text !important;
 
 				}
 
@@ -39,7 +41,7 @@
 				height:200px;
 				width:100%;
 				top:80px;
-				background:@light;
+				background:@dark-theme-toolbar;
 				box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),0 1px 5px 0 rgba(0, 0, 0, 0.12),0 3px 1px -2px rgba(0, 0, 0, 0.2);
 
 			}
@@ -58,13 +60,13 @@
     .dropdown-menu {
       width:100%;
       border-radius:0;
-      background:#eee;
+      background:@dark-theme-dropdown;
       margin:0;
-      max-height:460px;
-      overflow-y:scroll;
+      //max-height:460px;
+      //overflow-y:scroll;
       text-align:center;
 			position:fixed;
-			top:124px;
+			top:73px;
 			left:0;
 			padding:10px 0 30px;
 		  opacity:.3;
@@ -112,18 +114,18 @@
 				}
 
 	      &.search-term-button--active {
-	        background-color:@md-primary !important;
+	        background-color:@light !important;
 
 
 	        .mdi, span {
-	          color:@light !important;
+	          color:@dark !important;
 
 	        }
 
 	      }
 
         span {
-					color:@dark !important;
+					color:@dark-theme-dropdown-text !important;
 				  font-family: @font-label !important;
 
         }
@@ -131,7 +133,7 @@
 				.mdi {
 				  display: inline-block !important;
 				  vertical-align: top;
-				  color:#999 !important;
+				  color:@dark-theme-dropdown-text !important;
 					line-height:0;
 					margin:0;
 					padding:10px;
@@ -158,17 +160,11 @@
   display:inline-block;
   vertical-align: top;
   height:69px;
-  background:@light;
   padding:10px 20px 5px 25px;
 	margin:0 5px;
 
   &:hover {
     background:@md-primary;
-  }
-
-  &.search-type-keyword {
-    border-left:1px solid #ddd;
-
   }
 
 	&.dropdown-toggle {
@@ -177,7 +173,7 @@
 	  font-family: @font-label ;
 
     span {
-			color:@dark !important;
+			color:@light !important;
 		  font-family: @font-label !important;
 		}
 
@@ -187,34 +183,35 @@
 
 	}
 
-	input[type="text"]{
-	  font-family: @font-label !important;
-		font-weight:light !important;
+	&.text-search {
+	  padding:0px 20px 0px 45px;
+
+		input[type="text"]{
+		  font-family: @font-label !important;
+			font-weight:light !important;
+		  font-family: @font-label !important;
+			font-weight:normal !important;
+			color:@light !important;
+			margin-top:5px !important;
+
+		}
+
+		hr {
+			bottom:20px !important;
+			border-bottom: 2px solid @light !important;
+		}
+
+
 		label {
 		  font-family: @font-label !important;
-			font-weight:light !important;
+			font-weight:normal !important;
+			color:@light !important;
+			top:25px !important;
 
 		}
 
-		::-webkit-input-placeholder {
-		  font-family: @font-label !important;
-			font-weight:light !important;
-		}
-		:-moz-placeholder {
-		  font-family: @font-label !important;
-			font-weight:light !important;
-		}
-		::-moz-placeholder {
-		  font-family: @font-label !important;
-			font-weight:light !important;
-		}
-		:-ms-input-placeholder {
-		  font-family: @font-label !important;
-			font-weight:light !important;
-		}
 
 	}
-
 
   span, i, input {
     display:inline-block;
@@ -223,12 +220,12 @@
 
   span {
     font-family:@font-label(14px);
-    color:@md-primary-dark;
+    color:@light;
 
   }
 
   i {
-    color:@md-primary-dark;
+    color:@light;
     font-size:18px;
     margin:9px 0 6px 20px;
 
@@ -236,7 +233,7 @@
   }
 
   &.selected {
-	background:@md-primary;
+		background:@light;
     .unchecked {
       display:none;
     }
@@ -253,7 +250,7 @@
 
 .text-search {
   padding:0;
-  color:@dark;
+  color:@light;
   background:transparent;
   border:0;
 
@@ -264,7 +261,7 @@
   input {
     background:transparent;
     width: 260px;
-    border-bottom:2px solid @md-primary-dark;
+    border-bottom:2px solid @light;
     height:auto;
     padding:10px;
 
@@ -276,11 +273,10 @@
 }
 
 .text-search.date-search {
-	padding:10px 15px;
 
   label {
     font-family:@font-label(14px);
-    color:@md-primary-dark;
+    color:@light;
     display:inline-block;
     padding:14px 5px 5px 0;
 
@@ -395,42 +391,35 @@
 	display:none;
 }
 
-.search .comm-button .go-to-commentary {
-		display:inline-block;
-		float:right;
-		//height:40px;
-		//width:125px;
-		margin:10px 30px 0px 0px;
-		padding:14px 26px;
-		font-family:@font-label( 16px );
-		background:#607D8B;
-		color:@light;
-		border-radius:0px;
-		outline:none;
+.search-tool.search-type-date {
+	.dropdown-menu {
+		padding:50px 15px;
 
-		&:hover {
-			background:#00BCD4;
-		}
+	}
 }
+
 
 
 .search-tool--date {
 	width:10%;
-	max-width:300px;
-	min-width:200px;
+	max-width:600px;
+	min-width:400px;
 	border-right:none;
 	background:transparent;
+	text-align:center;
+	padding:15px 0;
 
 	.irs {
 		width:100%;
+		margin:0px auto;
 	}
 
 	.irs-grid-pol {
-		background:#222;
+		background:@light;
 	}
 
 	label {
-		font-family:@font-label;
+		font-family:@font-label !important;
 		font-size:14px;
 		color:@light;
 		display:inline-block;
@@ -438,14 +427,32 @@
 
 	}
 
+	.irs-from, .irs-to, .irs-single, .irs-min, .irs-max {
+		font-size:14px;
+		padding:6px 10px 3px;
+	}
+
 	.irs-from, .irs-to, .irs-single {
-		background:@md-primary-dark;
+		background:@light;
+		color:@dark;
+	}
+
+	.irs-min, .irs-max {
+		background:@dark-theme-background;
 		color:@light;
+
 	}
 
 	.irs-from:after, .irs-to:after, .irs-single:after {
-		border-top-color:@md-primary-dark;
+		border-top-color:@light;
 
+	}
+
+	.irs-grid-text {
+		font-family:@font-label;
+		font-weight:bold;
+		font-size:12px;
+		bottom:-7px;
 	}
 
 	input {
