--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -10,7 +10,6 @@
 	margin:0 auto;
 	padding:50px 0;
 	width:95%;
-	max-width:1400px;
 	text-align:center;
   //opacity:0;
 
@@ -32,15 +31,15 @@
 
 .object-teaser {
   display:inline-block;
-  width:30%;
-	max-width:400px;
-	min-width:200px;
+  width:22%;
+	max-width:360px;
+	min-width:230px;
   vertical-align: top;
-  margin:10px;
-  background:#fff;
+  margin:15px 10px;
+  background:@dark-theme-card;
 	text-align:left;
 	box-shadow: -1px 0 2px 0 rgba(0,0,0,0.12) , 1px 0 2px 0 rgba(0,0,0,0.12) , 0 1px 1px 0 rgba(0,0,0,0.24);
-	height:430px;
+	height:460px;
 
 	&:hover {
 		box-shadow: -2px 0 2px 0 rgba(0,0,0,0.16) , 2px 0 2px 0 rgba(0,0,0,0.16) , 0 2px 2px 0 rgba(0,0,0,0.23);
@@ -49,7 +48,7 @@
   .object-thumbnail-wrap {
     width:100%;
     position:relative;
-    height:220px;
+    height:240px;
 		overflow:hidden;
 
     img {
@@ -73,6 +72,7 @@
     font-family:@font-title;
     font-size:18px;
 		line-height:1.3em;
+		color:@light;
   }
 
 	.object-teaser-subtitle {
@@ -81,6 +81,7 @@
 		font-size:14px;
 		font-family:@font-label;
 		line-height:1.5em;
+    color:#ddd;
 	}
 
   p {
@@ -88,7 +89,7 @@
     margin:0 2px;
     font-size:16px;
     line-height:1.2em;
-    color:@text-secondary;
+    color:#ddd;
 		text-transform: capitalize;
 		font-family:@font-reading;
 
