clicking on search term in the filters widget removes the search term from the filters and renders the corresponding SearchTermButton inactive

--- a/client/views/objects/objects-search-tools.import.less
+++ b/client/views/objects/objects-search-tools.import.less
@@ -62,8 +62,8 @@
       border-radius:0;
       background:@dark-theme-dropdown;
       margin:0;
-      //max-height:460px;
-      //overflow-y:scroll;
+      max-height:600px;
+      overflow-y:scroll;
       text-align:center;
 			position:fixed;
 			top:73px;
