grid and list views; add catalog number to teaser

--- a/client/views/objects/catalog.import.less
+++ b/client/views/objects/catalog.import.less
@@ -20,10 +20,11 @@
 }
 
 .catalog-layout {
-
+	background:@dark-theme-background;
+	
 	.objects-list {
 		padding:10px 0;
-		background:@dark-theme-background;
+		min-height:700px;
 
 	}
 
