--- a/client/views/objects/objects-search-tools.import.less
+++ b/client/views/objects/objects-search-tools.import.less
@@ -361,6 +361,16 @@
   border:1px solid @light;
 	border-radius:2px;
 
+	&.filter-dateFrom, &.filter-dateTo {
+		.filter-val {
+			cursor:default !important;
+			button, div, span {
+				cursor:default !important;
+
+			}
+		}
+	}
+
   .filter-key, .filter-vals, .filter-val {
     display:inline-block;
     vertical-align: top;
