--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -17,6 +17,50 @@
     //opacity:1;
 
   }
+
+
+	&.objects-container--list {
+
+		.object-teaser {
+			width:100%;
+
+			.object-thumbnail-wrap {
+				width:30%;
+				display:inline-block;
+				vertical-align: top;
+
+			}
+			.object-text-wrap {
+				width:69%;
+				display:inline-block;
+				vertical-align: top;
+
+			}
+
+		}
+
+	}
+
+
+}
+
+.objects-list {
+	.no-results {
+		max-width:95%;
+		margin:0 auto;
+		text-align:center;
+		p {
+			text-align:center;
+			margin:20px auto;
+			color:@light;
+			font-size:26px;
+			line-height:1.3em;
+			opacity:0.4;
+
+
+		}
+
+	}
 }
 
 .loading-collections {
@@ -28,6 +72,7 @@
   }
 
 }
+
 
 .object-teaser {
   display:block;
@@ -43,6 +88,10 @@
 
 	&:hover {
 		box-shadow: -2px 0 2px 0 rgba(0,0,0,0.16) , 2px 0 2px 0 rgba(0,0,0,0.16) , 0 2px 2px 0 rgba(0,0,0,0.23);
+
+		.object-thumbnail-wrap .object-catalog-n {
+			opacity:0.7;
+		}
 	}
 
   .object-thumbnail-wrap {
@@ -50,6 +99,35 @@
     position:relative;
     height:240px;
 		overflow:hidden;
+
+		.object-catalog-n {
+			position:absolute;
+			top:20px;
+			left:20px;
+			z-index:3;
+			display:block;
+			background:@dark-theme-card;
+			opacity:0.4;
+			border-radius:100%;
+			width:40px;
+			height:40px;
+
+			span {
+				font-size:14px;
+				font-family:@font-reading;
+				font-weight:bold;
+				color:@light;
+				display:block;
+				text-align:center;
+				vertical-align: middle;
+				width:100%;
+				height:100%;
+				padding-top:9px;
+
+			}
+
+
+		}
 
     img {
       width:100%;
