--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -37,6 +37,23 @@
 
 			}
 
+			h3 {
+				font-size:26px;
+			}
+
+			p {
+				font-size:20px;
+				line-height:1.5em;
+			}
+
+			.object-teaser-meta {
+				p {
+					font-size:14px;
+					line-height:1.2em;
+					padding:4px;
+				}
+			}
+
 		}
 
 	}
@@ -214,6 +231,10 @@
 
 .page-head {
   height:400px;
+	.background-image-holder {
+    //-webkit-filter: grayscale(30%); /* Chrome, Safari, Opera */
+    //filter: grayscale(30%);
+	}
 
 }
 
@@ -266,7 +287,11 @@
 
 .object-details {
 	width:100%;
-	background:#f6f6f6;
+	background:@dark-theme-background;
+	box-shadow:0px 0px 3px @dark-theme-toolbar;
+	position:relative;
+	z-index:1;
+	padding:60px 0 120px;
 
 	.object-details-inner {
 		max-width:1200px;
@@ -288,8 +313,13 @@
 
 	}
 
+	h2 {
+		color:@light;
+	}
+
 	.object-detail-text-wrap {
 		width:50%;
+		color:@light;
 	}
 
 	.object-detail-meta {
@@ -298,13 +328,16 @@
 
 		label {
 			font-family:@font-label;
-			font-size:15px;
+			font-size:17px;
 			padding-right:15px;
+			color:#ddd;
 
 		}
 		span {
 			font-family:@font-reading;
-			font-size:17px;
+			font-size:20px;
+			line-height:1.5em;
+			color:@light;
 
 		}
 	}
