--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -8,7 +8,7 @@
 }
 .objects-container {
 	margin:0 auto;
-	padding:30px 0;
+	padding:30px 0 120px;
 	width:90%;
 	text-align:center;
   //opacity:0;
@@ -23,6 +23,8 @@
 
 		.object-teaser {
 			width:100%;
+			min-width:none;
+			max-width:none;
 
 			.object-thumbnail-wrap {
 				width:30%;
@@ -93,7 +95,9 @@
 
 .object-teaser {
   display:block;
-  width:390px;
+  width:22%;
+	min-width:280px;
+	max-width:430px;
   vertical-align: top;
   margin:10px;
   background:#fff;
