add slider and object detail view to the catalog page

--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -242,6 +242,12 @@
 
 }
 
+.object-details-page {
+	.object-details {
+		padding:120px 0;
+	}
+}
+
 .object-details {
   .object-editor {
     margin:0;
