--- a/client/views/objects/catalog.import.less
+++ b/client/views/objects/catalog.import.less
@@ -21,10 +21,60 @@
 
 .catalog-layout {
 	background:@dark-theme-background;
-	
+
 	.objects-list {
 		padding:10px 0;
 		min-height:700px;
+
+	}
+
+	.object-details {
+		width:100%;
+		margin:0 auto;
+		box-shadow:none;
+		padding:60px 0;
+
+		.object-details-inner {
+			background:#eee;
+			width:95%;
+			margin:15px auto;
+			max-width:1200px;
+			padding:40px 50px;
+			color:@dark;
+
+			h2{
+				color:@dark;
+				font-size:26px;
+				line-height:1.3em;
+				margin:0 0 5px;
+			}
+			label, p, span {
+				color:@text-secondary;
+			}
+
+		}
+
+	}
+
+	.objects-list-slider {
+		padding-top:20px;
+		padding-bottom:120px;
+
+		.object-teaser {
+			display:inline-block;
+			width:270px;
+			min-width:0;
+			max-width:none;
+
+			.meta-items {
+				display:none;
+			}
+
+		}
+
+		.slick-dots {
+			bottom:0;
+		}
 
 	}
 
