--- a/client/views/objects/catalog.import.less
+++ b/client/views/objects/catalog.import.less
@@ -56,15 +56,15 @@
 
 	}
 
-	.objects-list-slider {
-		padding-top:20px;
-		padding-bottom:120px;
+	.object-slider-teaser {
+		padding: 5%;
 
 		.object-teaser {
 			display:inline-block;
-			width:270px;
+			width:auto;
 			min-width:0;
 			max-width:none;
+			margin:auto;
 
 			.meta-items {
 				display:none;
