--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -94,27 +94,22 @@
 
 
 .object-teaser {
-  display:block;
-  width:22%;
-	min-width:280px;
-	max-width:430px;
-  vertical-align: top;
-  margin:10px;
-  background:#fff;
-  vertical-align: top;
-  margin:15px 10px;
-  background:@dark-theme-card;
-	text-align:left;
-	box-shadow: -1px 0 2px 0 rgba(0,0,0,0.12) , 1px 0 2px 0 rgba(0,0,0,0.12) , 0 1px 1px 0 rgba(0,0,0,0.24);
+  padding: 1%;
+  .object-teaser-wrap {
+    display:block;
+    vertical-align: top;
+    background:@dark-theme-card;
+    text-align:left;
+    box-shadow: -1px 0 2px 0 rgba(0,0,0,0.12) , 1px 0 2px 0 rgba(0,0,0,0.12) , 0 1px 1px 0 rgba(0,0,0,0.24);
 
-	&:hover {
-		box-shadow: -2px 0 2px 0 rgba(0,0,0,0.16) , 2px 0 2px 0 rgba(0,0,0,0.16) , 0 2px 2px 0 rgba(0,0,0,0.23);
+    &:hover {
+      box-shadow: -2px 0 2px 0 rgba(0,0,0,0.16) , 2px 0 2px 0 rgba(0,0,0,0.16) , 0 2px 2px 0 rgba(0,0,0,0.23);
 
-		.object-thumbnail-wrap .object-catalog-n {
-			opacity:0.7;
-		}
-	}
-
+      .object-thumbnail-wrap .object-catalog-n {
+        opacity:0.7;
+      }
+    }
+  }
   .object-thumbnail-wrap {
     width:100%;
     position:relative;
