--- a/client/views/ipads/ipads.import.less
+++ b/client/views/ipads/ipads.import.less
@@ -3,8 +3,13 @@
 	margin-bottom: 15px;
 }
 .ipad-content {
-	background: #455266;
+	background: @dark-theme-background;
 	padding-top: 0px;
+}
+.ipad-toolbar {
+	height: auto;
+	background: @dark-theme-card;
+	padding: 1%;
 }
 .slick-slide .image {
     padding: 5%;
