Fixing catalog title width for small screens and removing toolbar styles
Signed-off-by: Suhaib Khan <suheb.work@gmail.com>

--- a/client/views/objects/objects-search-tools.import.less
+++ b/client/views/objects/objects-search-tools.import.less
@@ -606,12 +606,16 @@
 		display:inline-block;
 		vertical-align: top;
 		text-align:center;
+		width: 60%;
 
 		h4 {
 			color:@light ;
 			font-size:18px;
-			padding:10px 0;
+			padding:12px 0;
 			margin:0;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 	}
 
