--- a/client/views/objects/catalog.import.less
+++ b/client/views/objects/catalog.import.less
@@ -32,7 +32,7 @@
 		width:100%;
 		margin:0 auto;
 		box-shadow:none;
-		padding:60px 0;
+		padding:20px 0 0;
 
 		.object-details-inner {
 			background:#eee;
