Adding search tool sidepanel for smaller screens
Signed-off-by: Suhaib Khan <suheb.work@gmail.com>

--- a/client/style/globals/header.import.less
+++ b/client/style/globals/header.import.less
@@ -15,9 +15,6 @@ header {
     width: 100%;
   }
 
-  .left-drawer-toggle {
-
-  }
   .logo {
     padding: 10px 5px !important;
     vertical-align: top !important;
@@ -84,7 +81,7 @@ header {
     }
   }
 
-  .logo, .left-drawer-toggle, a[type="button"] {
+  .logo, a[type="button"] {
     color: @light !important;
     span {
       color: @light !important;
