--- a/client/style/globals/responsive.import.less
+++ b/client/style/globals/responsive.import.less
@@ -1,9 +1,19 @@
-@media screen and (max-width: 1170px) {
+header .navbar-header .right-drawer-toggle{
+    display: none !important;
+}
+@media screen and (max-width: 1200px) {
 
   header .navbar-collapse.collapse.module-group.right {
     display:none !important;
+  }
 
+  header .navbar-header .right-drawer-toggle{
+    display: inline-block !important;
+    float: right;
+  }
 
+  .navbar-header {
+    float: none;
   }
 
 }
