--- a/client/views/objects/catalog.import.less
+++ b/client/views/objects/catalog.import.less
@@ -8,7 +8,7 @@
 		padding: 17px 4px !important;
 	}
 
-	button.left-drawer-toggle {
+	button.left-drawer-toggle, button.right-drawer-toggle  {
 		height:73px !important;
 		span {
 		  color: @light !important;
