Highlighting current/active slide in thumbnail slider
Signed-off-by: Suhaib Khan <suheb.work@gmail.com>

--- a/client/views/ipads/ipads.import.less
+++ b/client/views/ipads/ipads.import.less
@@ -6,8 +6,19 @@
 	background: @dark-theme-background;
 	padding-top: 0px;
 }
-.slick-slide .image {
-    padding: 5%;
+.slick-slide {
+	.image {
+		padding: 5%;
+		transition: all 200ms ease;
+	}
+}
+.slick-center {
+	.image {
+		transform: scale(1.05);
+		div {
+			border: 2px solid @md-accent-500;
+		}
+	}
 }
 .slick-slide img {
     display: block;
