--- a/client/style/globals/footer.import.less
+++ b/client/style/globals/footer.import.less
@@ -1,11 +1,11 @@
 footer
 {
-  background-color: #222;
+  background: #111;
   color: white;
   box-shadow:0px 0px 6px #111;
 
   &.bg-dark {
-    background-color: #222;
+	  background: #111;
 
   }
 
