--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -1,5 +1,6 @@
 
 .home-layout section {
+	background:#fff;
 
   h2, h3, h4, h5 {
     text-align:center;
@@ -520,14 +521,31 @@ section#lenders {
   }
 
   a {
-    font-size:24px;
+    font-size:22px;
     font-family:@font-reading;
-    padding:12px 20px;
+    padding:12px 0px;
     display:inline-block;
     vertical-align: top;
+		width:28%;
+		margin:10px 2%;
+		line-height:1.4em;
+		min-width:220px;
+		opacity:0.9;
+		text-shadow:0px 0px 6px #222;
+
+		&::after {
+			width:50%;
+			height:3px;
+			background:rgba(255,255,255,0.8);
+
+
+		}
+
     &:hover {
       color:#eee;
-      text-decoration:underline;
+			opacity:1;
+			text-shadow:0px 0px 18px #222;
+      //text-decoration:underline;
     }
 
   }
