--- a/client/views/ipads/ipads.import.less
+++ b/client/views/ipads/ipads.import.less
@@ -28,10 +28,13 @@
 }
 body, .page-ipad {
 	background:@dark-theme-toolbar;
+	background:#08111b;
 
 }
 .ipad-content {
 	background:@dark-theme-toolbar;
+	background:#08111b;
+	background:#0e141b;
 	padding-top: 0px;
 
 	.slick-prev {
@@ -75,6 +78,7 @@ body, .page-ipad {
 
 .ipad-toolbar {
 	padding:50px 0 10px !important;
+	background:#0a0f15 !important;
 
 	h3 {
 		font-size:28px;
@@ -130,7 +134,7 @@ body, .page-ipad {
 }
 
 .info-modal {
-	background:rgba(35, 47, 60, 0.9);
+	background:rgba(35, 47, 60, 0.94);
 	position:fixed;
 	width:100%;
 	height:100%;
@@ -197,6 +201,17 @@ body, .page-ipad {
 		padding:0;
 	}
 
+	.teaching-text {
+		color:rgba(255,255,255,0.3);
+		text-align:center;
+		width:100%;
+		margin:30px auto;
+		font-size:18px;
+		line-height:1.5em;
+		font-style:italic;
+		padding-top:60px;
+	}
+
 	.ipad-container--spread-view {
 		padding:120px 30px;
 
@@ -222,6 +237,7 @@ body, .page-ipad {
 		bottom:0;
 		width:100%;
 		height:210px;
+		background:#0a0f15 !important;
 
 		.slick-slider {
 			margin:0;
