--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -523,16 +523,19 @@ section#lenders {
   a {
     font-size:22px;
     font-family:@font-reading;
-    padding:12px 0px;
+    padding:30px;
     display:inline-block;
     vertical-align: top;
-		width:28%;
-		margin:10px 2%;
+		width:30%;
+		margin:10px 1%;
 		line-height:1.4em;
 		min-width:220px;
 		opacity:0.9;
-		text-shadow:0px 0px 6px #222;
+		//text-shadow:0px 0px 6px #222;
+		border:1px solid rgba(255,255,255,0.01);
+		border-radius:2px;
 
+		/*
 		&::after {
 			width:50%;
 			height:3px;
@@ -540,12 +543,25 @@ section#lenders {
 
 
 		}
+		*/
+
+		hr {
+			width:66px;
+			background:rgba(255,255,255,0.8);
+			height:3px;
+			margin:25px auto 0;
+			border:none;
+			outline:none;
+			display:block;
+		}
 
     &:hover {
       color:#eee;
 			opacity:1;
-			text-shadow:0px 0px 18px #222;
+			//text-shadow:0px 0px 12px #222;
       //text-decoration:underline;
+			background:rgba(0,0,0,0.05);
+			border:1px solid rgba(255,255,255,0.8);
     }
 
   }
