small visual updates for object detail view in catalog

--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -249,6 +249,18 @@
   }
 }
 
+.object-detail-header {
+	hr {
+		margin:15px 0;
+		height:3px;
+		background:@md-primary-100;
+		outline:none;
+		border:none;
+		max-width:333px;
+	}
+
+}
+
 // single object
 
 .single-object-images {
