--- a/client/views/objects/catalog.import.less
+++ b/client/views/objects/catalog.import.less
@@ -49,7 +49,8 @@
 				margin:0 0 5px;
 			}
 			label, p, span {
-				color:@text-secondary;
+				color:@text-color;
+				opacity:0.85;
 			}
 
 		}
