small style and content fixes for ios builds

--- a/client/style/globals/responsive.import.less
+++ b/client/style/globals/responsive.import.less
@@ -18,6 +18,48 @@ header .navbar-header .right-drawer-toggle{
 
 }
 
+@media screen and (max-width: 1000px) {
+	.page-ipad .ipad-container--spread-view {
+		padding:130px 0px;
+
+	}
+
+	.page-ipad .ipad-container--single-view {
+		.single-view-slider {
+			height:720px;
+			.slick-slide {
+				.image {
+					overflow:hidden;
+					height:720px;
+					background:transparent;
+
+					> div {
+						background-color:transparent !important;
+					}
+
+					img {
+						//height:720px;
+						background:transparent;
+					}
+
+				}
+
+			}
+
+		}
+
+		.coaching-text {
+			padding-top:0px;
+		}
+
+
+	}
+
+	.ipad-toolbar {
+		//padding:50px 0 10px !important;
+	}
+
+}
 
 @media screen and (max-width: 768px) {
 
