--- a/client/views/ipads/ipads.import.less
+++ b/client/views/ipads/ipads.import.less
@@ -27,15 +27,18 @@
 	}
 }
 .page-ipad {
-	background:@dark-theme-toolbar;
-	background:#08111b;
-	background:#0e141b;
+	//background:@dark-theme-toolbar;
+	//background:#08111b;
+	//background:#0e141b;
+	background:#191f27;
 
 }
 .ipad-content {
-	background:@dark-theme-toolbar;
-	background:#08111b;
-	background:#0e141b;
+	//background:@dark-theme-toolbar;
+	//background:#08111b;
+	//background:#0e141b;
+	//background:#fff;
+	background:#191f27;
 	padding-top: 0px;
 
 	.slick-prev {
@@ -67,6 +70,14 @@
 		}
 	}
 }
+.image.thumbnail-image--active-slide {
+	transform: scale(1.2);
+	margin: 10px !important;
+	div {
+		border: 2px solid rgba(197, 202, 233, 0.1);
+		padding:2px;
+	}
+}
 .slick-slide img {
   display: block;
 }
@@ -81,14 +92,15 @@
 }
 
 .ipad-toolbar {
-	padding:50px 0 10px !important;
+	padding:20px 0 10px !important;
 	background:#0a0f15 !important;
 
 	h3 {
-		font-size:28px;
+		font-size:22px;
 		color:@light;
 		margin:0;
-		padding:0;
+		padding:0 10px;
+		max-width:60%;
 	}
 	.mdi{
 		&:before {
@@ -213,20 +225,33 @@
 		font-size:18px;
 		line-height:1.5em;
 		font-style:italic;
-		padding-top:0px;
+		padding-top:140px;
 	}
 
 	.ipad-container--spread-view {
-		padding:120px 0px;
+		padding:0px 0px;
 
 
 
 		.spread-view-slider {
+			height: 300px;
+			background:transparent;
 			.slick-slide {
 				height:100%;
+				background:transparent;
 				.image {
 					overflow:hidden;
-					height:425px;
+					height:460px;
+					background:transparent;
+
+					> div {
+						background-color:transparent !important;
+					}
+
+					img {
+						//height:460px;
+						background:transparent;
+					}
 
 				}
 
@@ -238,23 +263,44 @@
 
 	.ipad-container--single-view {
 		.single-view-slider {
+			height:300px;
+			.slick-slide {
+				height:100%;
+				background:transparent;
+				.image {
+					overflow:hidden;
+					height:460px;
+					background:transparent;
 
+					> div {
+						background-color:transparent !important;
+					}
+
+					img {
+						//height:460px;
+						background:transparent;
+					}
+
+				}
+
+			}
 		}
 	}
 
 
-	.thumbnail-slider {
+	.thumbnail-slider, .thumbnail-scroll {
 		position:fixed;
 		left:0;
 		bottom:0;
 		width:100%;
-		height:210px;
+		height:160px;
 		background:#0a0f15 !important;
+		overflow-y:scroll;
 
 		.slick-slider {
 			margin:0;
 			padding:20px;
-			height:210px;
+			height:160px;
 		}
 
 		.image {
@@ -266,16 +312,29 @@
 			}
 
 			img {
-				height:135px;
+				height:95px;
 
 			}
 
 		}
 
 		.slick-track {
-			height:170px;
+			height:130px;
 
 
+		}
+
+		.thumbnail-scroll-inner {
+			width:6600px;
+			heigth:140px;
+			margin:20px;
+			display:block;
+		}
+
+		.thumbnail-image-scroll {
+			display:inline-block;
+			vertical-align: top;
+			width:90px;
 		}
 
 	}
