--- a/client/style/globals/responsive.import.less
+++ b/client/style/globals/responsive.import.less
@@ -30,7 +30,8 @@ header .navbar-header .right-drawer-toggle{
 			.slick-slide {
 				.image {
 					overflow:hidden;
-					height:720px;
+					height:900px;
+					margin-top:60px;
 					background:transparent;
 
 					> div {
@@ -38,7 +39,8 @@ header .navbar-header .right-drawer-toggle{
 					}
 
 					img {
-						//height:720px;
+						height:720px;
+						width:auto !important;
 						background:transparent;
 					}
 
