--- a/client/views/ipads/ipads.import.less
+++ b/client/views/ipads/ipads.import.less
@@ -33,6 +33,45 @@
 	background:#191f27;
 
 }
+.page-ipad-videos {
+	padding-top:110px;
+	text-align:center;
+
+	&.page-ipad-videos-single {
+		.ipad-video {
+			width:86%;
+		}
+
+	}
+
+}
+
+.ipad-video {
+	width:48%;
+	display:inline-block;
+	vertical-align: top;
+	margin:0px auto;
+	padding:10px 1%;
+	text-align:center;
+
+	.video-title {
+		font-size:22px;
+		font-weight:bold;
+		color:#aaa;
+		display:block;
+		padding:25px;
+	}
+
+	video {
+		width:100%;
+		height:460px;
+		background:#08111b;
+
+	}
+
+
+}
+
 .ipad-content {
 	//background:@dark-theme-toolbar;
 	//background:#08111b;
@@ -249,7 +288,7 @@
 					}
 
 					img {
-						//height:460px;
+						height:460px;
 						background:transparent;
 					}
 
@@ -269,7 +308,7 @@
 				background:transparent;
 				.image {
 					overflow:hidden;
-					height:460px;
+					height:600px;
 					background:transparent;
 
 					> div {
@@ -277,7 +316,7 @@
 					}
 
 					img {
-						//height:460px;
+						height:460px;
 						background:transparent;
 					}
 
@@ -295,7 +334,8 @@
 		width:100%;
 		height:160px;
 		background:#0a0f15 !important;
-		overflow-y:scroll;
+		overflow-x:scroll;
+		overflow-y:hidden;
 
 		.slick-slider {
 			margin:0;
@@ -325,7 +365,7 @@
 		}
 
 		.thumbnail-scroll-inner {
-			width:6600px;
+			width:3600px;
 			heigth:140px;
 			margin:20px;
 			display:block;
