switch between object detail view and list with flow router

--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -151,6 +151,10 @@
       opacity:1;
       transition: opacity 100ms ease-out;
       position:relative;
+
+			&.default {
+				opacity:0.4;
+			}
     }
 
   }
