--- a/client/views/objects/catalog.import.less
+++ b/client/views/objects/catalog.import.less
@@ -21,10 +21,12 @@
 
 .catalog-layout {
 	background:@dark-theme-background;
+	min-height:900px;
+	padding-bottom:200px;
 
 	.objects-list {
 		padding:10px 0;
-		min-height:700px;
+		min-height:900px;
 
 	}
 
