add viewer toggle to search tools and small fixes for search buttons

--- a/client/style/variables.import.less
+++ b/client/style/variables.import.less
@@ -212,3 +212,10 @@
 	-ms-transform-origin:     @x @y;
 	-o-transform-origin:      @x @y;
 }
+.blur(@value: 2px) {
+	-webkit-filter: blur(@value);
+	-moz-filter: blur(@value);
+	-o-filter: blur(@value);
+	-ms-filter: blur(@value);
+	filter: blur(@value);
+}
