--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -64,6 +64,9 @@
 }
 
 .objects-list {
+	position:relative;
+	z-index:98;
+
 	.no-results {
 		max-width:95%;
 		margin:0 auto;
@@ -154,6 +157,7 @@
 
 			&.default {
 				opacity:0.4;
+				.blur(6px);
 			}
     }
 
@@ -330,6 +334,41 @@
 	.object-detail-thumbnail-wrap {
 		width:40%;
 		padding-right:5%;
+		position:relative;
+
+		.thumbnail-mirador-overlay {
+			position:absolute;
+			bottom:20px;
+			left:20px;
+			background:@light;
+			border-radius:2px;
+			padding:12px 15px 8px;
+			box-shadow:0px 0px 3px @dark-theme-toolbar;
+			cursor:pointer;
+
+			&:hover {
+				background:@md-primary;
+				border:1px solid @light;
+				span, i {
+					color:@light;
+				}
+			}
+
+			span{
+				color:@dark-theme-dropdown-text;
+				display:inline-block;
+				vertical-align: top;
+				padding-left:10px;
+				text-transform: uppercase;
+				font-size:14px;
+			}
+			i {
+				color:@dark-theme-toolbar;
+
+			}
+
+
+		}
 
 
 	}
@@ -365,6 +404,61 @@
 
 
 }
+
+.object-mirador-viewer {
+	display:none;
+	width:100%;
+	height:100%;
+	position:fixed;
+	top:0;
+	left:0;
+	background:rgba(0,0,0,0.9);
+	overflow:hidden;
+	z-index:1000;
+	text-align:center;
+
+
+	&.object-mirador-viewer--open {
+		display:block;
+
+	}
+
+	iframe {
+		box-shadow:0px 0px 5px rgba(0, 0, 0, 1);
+		width:88%;
+		height:90%;
+		margin:6% auto;
+		background:@dark-theme-toolbar;
+
+
+
+	}
+
+	i {
+		position:absolute;
+		top:60px;
+		right:40px;
+		background:@light;
+		border:2px solid @dark-theme-dropdown-text;
+		color:@dark-theme-dropdown-text;
+		height:60px;
+		width:60px;
+		border-radius:100%;
+		padding:17px 10px;
+		cursor:pointer;
+
+		&:hover {
+			background:@md-primary;
+			border:2px solid @md-primary;
+			color:@light;
+
+		}
+
+	}
+
+
+}
+
 .object-detail-viewer {
 	width:100%;
 	height:500px;
