add catalog n search and update institutions handling in templates

--- a/client/views/objects/objects-search-tools.import.less
+++ b/client/views/objects/objects-search-tools.import.less
@@ -229,6 +229,7 @@
     span {
 			color:@light !important;
 		  font-family: @font-label !important;
+			font-size:12px !important;
 		}
 
 		.mdi {
@@ -262,6 +263,7 @@
 			font-weight:normal !important;
 			color:@light !important;
 			top:30px !important;
+			font-size:12px;
 
 		}
 
@@ -308,7 +310,12 @@
   color:@light;
   background:transparent;
   border:0;
-  width: 160px;
+  width: 130px;
+
+	&.catalog-n-search {
+	  width: 80px;
+
+	}
 
   &:hover {
     background:transparent;
@@ -329,7 +336,7 @@
 
 .search-tool.search-type-mirador {
 	display:inline-block !important;
-	width:155px !important;
+	width:140px !important;
 	height:73px !important;
 	padding:25px 10px;
 
@@ -338,7 +345,7 @@
 	}
   label {
     font-family:@font-label !important;
-		font-size:14px !important;
+		font-size:12px !important;
 		font-weight:lighter ;
     color:@light !important;
 		text-transform: uppercase;
