--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -530,6 +530,11 @@
         max-width:330px;
 				width:30%;
         min-width:200px;
+
+				&.catalog-n-search {
+					max-width:200px;
+				}
+
 				input {
 	        background: transparent;
 					color:@dark;
