--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -341,8 +341,8 @@ section#twitter {
 
   .bw-tweet-wrapper {
     padding: 10px;
-    margin:10px 1.5%;
-    width:30%;
+    margin:10px 0.5%;
+    width:32%;
     min-width:290px;
     display:inline-block;
     vertical-align:top;
@@ -356,6 +356,8 @@ section#twitter {
       border-radius: 60px;
       float: left;
       margin-right: 15px;
+			display:inline-block;
+			vertical-align: top;
 
     }
 
@@ -384,58 +386,128 @@ section#catalog {
 
 section#events {
   background:#eee;
-  ul.events-list {
-    li.event-item {
-      padding: 10px 10px 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-      display: block;
-      align-items: center;
-      margin-bottom: 20px;
-      background:@light;
+}
+li.event-item {
+  padding: 10px 10px 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  display: block;
+  align-items: center;
+  margin-bottom: 20px;
+  background:@light;
 
-      .event-calendar-date {
-        border-left: 10px solid @md-primary-500;
-        text-align: center;
-        padding-left: 20px;
-        margin-right: 20px;
-        display:inline-block;
-        vertical-align: top;
-        width:10%;
+  .event-calendar-date {
+    border-left: 10px solid @md-primary-500;
+    text-align: center;
+    padding-left: 20px;
+    margin-right: 20px;
+    display:inline-block;
+    vertical-align: top;
+    width:10%;
 
-        h6.event-month {
-          margin-bottom: -3px;
-          font-size: 0.8em;
-        }
-        h3.event-day {
-          margin-bottom: -9px;
-          font-size: 3.5em;
-        }
-        h6.event-weekday {
-          margin: 0;
-          font-size: .9em;
-        }
-      }
-      .event-info {
-        display:inline-block;
-        vertical-align: top;
-        width:87%;
-        text-overflow:ellipsis;
-        text-align:left;
-
-        h3.event-title {
-          margin: 0;
-          padding:15px 25px;
-          font-size:20px;
-          color:#444;
-          font-weight:300;
-          text-align:left;
-        }
-        div.description {
-        }
-      }
+    h6.event-month {
+      margin-bottom: -3px;
+      font-size: 0.8em;
+    }
+    h3.event-day {
+      margin-bottom: -9px;
+      font-size: 3.5em;
+    }
+    h6.event-weekday {
+      margin: 0;
+      font-size: .9em;
     }
   }
+  .event-info {
+    display:inline-block;
+    vertical-align: top;
+    width:87%;
+    text-overflow:ellipsis;
+    text-align:left;
+    margin: 5px 0px 5px 0px;
+
+    h3.event-title {
+      padding:0;
+			margin:0;
+      font-size:26px;
+			line-height:1.3em;
+      color:#444;
+      font-weight:300;
+      text-align:left;
+			display:inline-block;
+			font-family:@font-reading;
+    }
+
+		a{
+
+			&:hover {
+
+				h3.event-title {
+			    //border-bottom: 0px solid @md-primary-light;
+			    //box-shadow: inset 0 0px 0 @md-primary-light;
+					color:#000;
+
+				}
+
+				.mdi-open-in-new {
+					color:@md-primary-900;
+
+				}
+
+			}
+
+			h3.event-title {
+		    //border-bottom: 1px solid @md-primary-light;
+		    //box-shadow: inset 0 -2px 0 @md-primary-light;
+				.transition(all 100ms ease-out);
+			}
+
+			.mdi-open-in-new {
+				color:@md-primary;
+				.transition(all 100ms ease-out);
+				padding:0 10px 5px;
+
+				&:before {
+					font-size:20px;
+				}
+
+			}
+
+
+		}
+  }
+}
+
+.add-to-calendar {
+	margin:15px 0 5px;
+	opacity:0.9;
+	&:hover {
+		opacity:1;
+	}
+
+	.a2cldr-btn, .a2cldr-list {
+		display:inline-block;
+		vertical-align: top;
+	}
+
+	.a2cldr-btn {
+		text-transform:uppercase;
+		font-family:@font-label;
+		font-size:12px;
+		font-weight:bold;
+		padding-right: 10px;
+
+	}
+
+	.a2cldr-list {
+		.a2cldr-item {
+			display:inline-block;
+			vertical-align: top;
+			padding-right:10px;
+			font-size:14px;
+		}
+	}
+
 }
 
 section#plan-your-trip {
@@ -520,16 +592,19 @@ section#lenders {
     color:@light;
   }
 
+	.lenders-masonry {
+		margin:0 auto;
+	}
+
   a {
     font-size:22px;
     font-family:@font-reading;
     padding:30px;
     display:inline-block;
     vertical-align: top;
-		width:30%;
+		width:280px;
 		margin:10px 1%;
 		line-height:1.4em;
-		min-width:220px;
 		opacity:0.9;
 		//text-shadow:0px 0px 6px #222;
 		border:3px solid rgba(255,255,255,0.1);
