objects cosmetic fixes, add catalog footer and background to catalog slider

--- a/client/style/variables.import.less
+++ b/client/style/variables.import.less
@@ -33,6 +33,9 @@
 @dark-theme-card: #232f3c;
 @dark-theme-dropdown: #7790af;
 @dark-theme-dropdown-text: #23303d;
+@dark-theme-ipad-1:#08111b;
+@dark-theme-ipad-2:#0e141b;
+@dark-theme-ipad-3:#191f27;
 
 @bw-blue: rgba(0, 20, 57, 1);
 @bw-blue-10: rgba(0, 20, 57, 0.1);
