--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -486,6 +486,16 @@
 
 }
 
+.objects-detail-slider {
+	width:100%;
+	background:@dark-theme-ipad-3;
+	padding:10px 0 1px;
+}
+.objects-detail-slider-inner {
+	width:95%;
+	margin:0 auto;
+}
+
 // search toolbar
 
 .search-toolbar {
