--- a/client/style/globals/footer.import.less
+++ b/client/style/globals/footer.import.less
@@ -74,3 +74,14 @@ footer
   max-width:600px;
   margin:0 auto;
 }
+
+footer.catalog-footer {
+	background:@dark-theme-ipad-2;
+	padding:15px;
+	text-align:right;
+	.copyright-information {
+		margin:0;
+		max-width:none;
+	}
+
+}
