--- a/client/style/main.less
+++ b/client/style/main.less
@@ -27,6 +27,7 @@
 @import "/client/views/objects/objects.import.less";
 @import "/client/views/objects/objects-search-tools.import.less";
 @import "/client/views/objects/catalog.import.less";
+@import "/client/views/objects/viewer.import.less";
 @import "/client/views/ipads/ipads.import.less";
 
 /* Shared views */
