--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -98,20 +98,23 @@
 
 .object-teaser {
   padding: 1%;
+
   .object-teaser-wrap {
     display:block;
     vertical-align: top;
     background:@dark-theme-card;
     text-align:left;
     box-shadow: -1px 0 2px 0 rgba(0,0,0,0.12) , 1px 0 2px 0 rgba(0,0,0,0.12) , 0 1px 1px 0 rgba(0,0,0,0.24);
+		.transition(box-shadow 300ms ease-out);
 
     &:hover {
-      box-shadow: -2px 0 2px 0 rgba(0,0,0,0.16) , 2px 0 2px 0 rgba(0,0,0,0.16) , 0 2px 2px 0 rgba(0,0,0,0.23);
+      box-shadow: -3px 0 4px 0 rgba(0,0,0,0.16) , 3px 0 4px 0 rgba(0,0,0,0.16) , 0 3px 3px 0 rgba(0,0,0,0.23);
 
       .object-thumbnail-wrap .object-catalog-n {
         opacity:0.7;
       }
     }
+
   }
   .object-thumbnail-wrap {
     width:100%;
@@ -130,6 +133,7 @@
 			border-radius:100%;
 			width:40px;
 			height:40px;
+			.transition(opacity 300ms ease-out);
 
 			span {
 				font-size:14px;
@@ -156,8 +160,8 @@
       position:relative;
 
 			&.default {
-				opacity:0.4;
-				.blur(6px);
+				opacity:0.9;
+				.blur(2px);
 			}
     }
 
@@ -338,7 +342,7 @@
 
 		.thumbnail-embedded-overlay {
 			position:absolute;
-			bottom:20px;
+			top:20px;
 			left:20px;
 			background:@light;
 			border-radius:2px;
@@ -400,61 +404,6 @@
 			color:@light;
 
 		}
-	}
-
-
-}
-
-.object-embedded-viewer {
-	display:none;
-	width:100%;
-	height:100%;
-	position:fixed;
-	top:0;
-	left:0;
-	background:rgba(0,0,0,0.9);
-	overflow:hidden;
-	z-index:1000;
-	text-align:center;
-
-
-	&.object-embedded-viewer--open {
-		display:block;
-
-	}
-
-	iframe, .embedded-beyondwords-viewer {
-		box-shadow:0px 0px 5px rgba(0, 0, 0, 1);
-		width:88%;
-		height:90%;
-		margin:6% auto;
-		background:@dark-theme-toolbar;
-
-
-
-	}
-
-	i.close-viewer {
-		position:absolute;
-		top:60px;
-		right:40px;
-		background:@light;
-		border:2px solid @dark-theme-dropdown-text;
-		color:@dark-theme-dropdown-text;
-		height:60px;
-		width:60px;
-		border-radius:100%;
-		padding:17px 10px;
-		cursor:pointer;
-		z-index:1;
-
-		&:hover {
-			background:@md-primary;
-			border:2px solid @md-primary;
-			color:@light;
-
-		}
-
 	}
 
 
