fix ie errors for object contain

--- a/client/views/objects/viewer.import.less
+++ b/client/views/objects/viewer.import.less
@@ -228,7 +228,8 @@
 				height:100%;
 				width:100%;
 				max-width:none;
-				object-fit: contain;
+				background-size:contain;
+				background-position:center;
 			}
 		}
 	}
@@ -265,7 +266,9 @@
 				height:100%;
 				width:100%;
 				max-width:none;
-				object-fit: contain;
+				background-size:contain;
+				background-position:center;
+				background-repeat:no-repeat;
 			}
 		}
 
