add check for supports objectfit

--- a/client/views/objects/viewer.import.less
+++ b/client/views/objects/viewer.import.less
@@ -230,6 +230,8 @@
 				max-width:none;
 				background-size:contain;
 				background-position:center;
+				background-repeat:no-repeat;
+				object-fit: contain;
 			}
 		}
 	}
@@ -269,6 +271,7 @@
 				background-size:contain;
 				background-position:center;
 				background-repeat:no-repeat;
+				object-fit: contain;
 			}
 		}
 
