--- a/client/style/main.less
+++ b/client/style/main.less
@@ -23,6 +23,7 @@
 /* Views */
 @import "/client/views/user/account.import.less";
 @import "/client/views/home/home.import.less";
+@import "/client/views/home/media-items.import.less";
 @import "/client/views/home/comingsoonhome.import.less";
 @import "/client/views/objects/objects.import.less";
 @import "/client/views/objects/objects-search-tools.import.less";
