--- a/client/views/home/media-items.import.less
+++ b/client/views/home/media-items.import.less
@@ -10,9 +10,16 @@
 	width:330px;
 	margin:10px 1%;
 	background:@light;
-	padding:20px 25px;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),0 1px 5px 0 rgba(0, 0, 0, 0.12),0 3px 1px -2px rgba(0, 0, 0, 0.2);
 	text-align: left;
+
+	.media-item-image-link.media-item-image-link--with-image {
+		height:200px;
+		overflow:hidden;
+		.media-item-image {
+			background-size: cover;
+		}
+	}
 
 	.media-item-link, .media-item-title {
 		display:block;
@@ -30,6 +37,10 @@
 		font-weight:bold;
 		color:@md-primary-300;
 
+	}
+
+	.media-item-info {
+		padding:20px 25px;
 	}
 
 	.media-item-title {
