--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -672,6 +672,7 @@ section#symposium {
     border:2px solid #eee;
     color:#eee;
     display:inline-block;
+		cursor:default !important;
 
     span {
       color:#eee;
