add ability to include images on media items

--- a/client/views/home/media-items.import.less
+++ b/client/views/home/media-items.import.less
@@ -15,9 +15,12 @@
 
 	.media-item-image-link.media-item-image-link--with-image {
 		height:200px;
+		width:100%;
 		overflow:hidden;
 		.media-item-image {
 			background-size: cover;
+			height:100%;
+			width:100%;
 		}
 	}
 
