adjust styles for media item images

--- a/client/views/home/home.import.less
+++ b/client/views/home/home.import.less
@@ -446,9 +446,8 @@ section#twitter {
 
   .bw-tweet-wrapper {
     padding: 10px;
-    margin:10px 0.5%;
-    width:32%;
-    min-width:290px;
+    margin:10px 1%;
+    width:330px;
     display:inline-block;
     vertical-align:top;
     text-align:left;
